--- a/task-manager-devops/monitoring/prometheus.yaml
+++ b/task-manager-devops/monitoring/prometheus.yaml
@@ -1,11 +1,23 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
+  # Prometheus self-monitoring
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['localhost:9100']
+  # Task API monitoring via Kubernetes Service Discovery
+  - job_name: 'task-api'
+    kubernetes_sd_configs:
+      - role: endpoints
+    relabel_configs:
+      # רק שירותים עם התווית app=task-api
+      - source_labels: [__meta_kubernetes_service_label_app]
+        action: keep
+        regex: task-api
+      # לשמור רק על הפורט http
+      - source_labels: [__meta_kubernetes_endpoint_port_name]
+        action: keep
+        regex: http
