--- a/task-manager-devops/test/prometheus.yaml
+++ b/task-manager-devops/test/prometheus.yaml
@@ -1,4 +1,15 @@
 global:
   scrape_interval: 15s
+
 scrape_configs:
-  
+  - job_name: 'task-api'
+    static_configs:
+      - targets: ['app:8000']
+
+  - job_name: 'postgres'
+    static_configs:
+      - targets: ['postgres:5432']
+
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
